--- a/styles/index.css
+++ b/styles/index.css
@@ -1,1 +1,64 @@
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');
+
+/* shared styles */
+
+.description {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+}
+
+.btn {
+    border-radius: 8px;
+    width: 200px;
+    background: rgb(13, 19, 33);
+    padding: 21px 24px 21px 24px;
+    color: rgb(255, 255, 255);
+    font-family: Azeret Mono;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 23px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+
+/* banner styles */
+
+
+header {
+    background-image: url("/assets/Hero-bg.png");
+    text-align: center; 
+    border: 4px dashed rgb(165, 171, 185);
+}
+
+.heading {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 48px;
+    font-weight: 800;
+    line-height: 68px;
+    letter-spacing: 0%;
+    text-align: center;
+   
+}
+
+.image {
+    width: 240px;
+}
+
+.banner {
+    width: 950px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin: 20px 200px 30px 350px;
+}
