--- a/styles/index.css
+++ b/styles/index.css
@@ -9,7 +9,6 @@
     font-weight: 400;
     line-height: 22px;
     letter-spacing: 0%;
-    text-align: center;
     opacity: 0.7;
 }
 
@@ -27,14 +26,31 @@
     text-align: center;
 }
 
+section {
+    /* width: 1070px; */
+    /* border: 2px solid red; */
+    margin: 68px 138px 82px 140px;
+}
+
+.center {
+    text-align: center;
+    justify-content: center;
+}
+
+.left {
+    text-align: left;
+}
+
+
 
 /* banner styles */
 
 
 header {
     background-image: url("../assets/hero.png");
-    text-align: center; 
-    border: 2px dashed rgb(165, 171, 185);
+    text-align: center;
+    border-top: 2px dashed rgb(165, 171, 185);
+    border-bottom: 2px dashed rgb(165, 171, 185);
 }
 
 .heading {
@@ -45,7 +61,7 @@ header {
     line-height: 60px;
     letter-spacing: 0%;
     text-align: center;
-   
+
 }
 
 .image {
@@ -54,12 +70,89 @@ header {
 
 .banner {
     width: 930px;
+    /* border: 2px solid red; */
     display: flex;
     flex-direction: column;
     text-align: center;
     align-items: center;
     justify-content: center;
     gap: 16px;
-    margin:20px 200px 40px 200px;
+    margin: 20px 200px 40px 200px;
 
+}
+
+/* section styles */
+
+.why {
+    padding: 74px 90px 74px 90px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 12px;
+    gap:30px;
+
+
+    background: rgba(13, 19, 33, 0.02);
+    /* border: 2px solid red; */
+
+}
+
+.content_des {
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+    align-items: center;
+    gap: 90px;
+}
+
+.content_reverse {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.content_des , .content_reverse {
+    border:0.5px solid  rgb(226, 220, 220);
+    box-shadow: 0 0.5px 3px  rgb(214, 204, 204);
+    border-radius: 12px;
+    padding:43px;
+    background: linear-gradient(90.00deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%);
+}
+
+.section_title {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 28px;
+    font-weight: 800;
+    line-height: 33px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+.text_title {
+    color: rgba(13, 19, 33, 0.7);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 31px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+
+.why_button {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 21px;
+    letter-spacing: 0%;
+    text-align: center;
+    padding: 10px 15px 10px 15px;
+    box-sizing: border-box;
+    border: 1px solid rgb(13, 19, 33);
+    opacity: 0.7;
+}
+
+.text_des{
+    display: flex;
+    flex-direction: column;
+    gap:10px;
 }
