--- a/styles/index.css
+++ b/styles/index.css
@@ -32,6 +32,16 @@ section {
     margin: 68px 138px 82px 140px;
 }
 
+.section_title {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 28px;
+    font-weight: 800;
+    line-height: 33px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
 .center {
     text-align: center;
     justify-content: center;
@@ -118,15 +128,7 @@ header {
     background: linear-gradient(90.00deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%);
 }
 
-.section_title {
-    color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
-    font-size: 28px;
-    font-weight: 800;
-    line-height: 33px;
-    letter-spacing: 0%;
-    text-align: center;
-}
+
 
 .text_title {
     color: rgba(13, 19, 33, 0.7);
@@ -206,7 +208,7 @@ header {
 
 .targets {
     display: flex;
-    gap:24px;
+    gap: 24px;
     /* border: 2px solid red; */
 }
 
@@ -219,20 +221,128 @@ header {
     background: rgba(255, 76, 30, 0.05);
 }
 
-.target2{
-   background: rgba(0, 76, 232, 0.05);;
+.target2 {
+    background: rgba(0, 76, 232, 0.05);
+    ;
 }
-.target3{
+
+.target3 {
     background: rgba(255, 223, 0, 0.05);
 }
-.tech{
+
+.tech {
     display: flex;
     flex-direction: column;
-    gap:20px;
+    gap: 20px;
 }
 
 .tech>p {
     padding: 0 130px;
     /* border: 2px solid red; */
-    margin-bottom:20px;
+    margin-bottom: 20px;
+}
+
+
+/* support styles */
+
+.support {
+    background-image: url("../assets/handshake.jpg");
+    background-size: cover;
+    /* <------ */
+    background-repeat: no-repeat;
+    background-position: center center;
+    padding: 60px;
+}
+
+.support_title {
+    color: rgb(255, 255, 255);
+    font-family: Azeret Mono;
+    font-size: 17px;
+    font-weight: 700;
+    line-height: 30px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+.support_sub {
+    color: rgb(255, 255, 255);
+    font-family: Azeret Mono;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+
+}
+
+.support_content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+.submit {
+    padding: 12px 15px 12px 15px;
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 23px;
+    letter-spacing: 0%;
+    text-align: center;
+    border-radius: 5px;
+    height: 52px;
+
+    background: rgb(255, 255, 255);
+}
+
+.feedback {
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 5px;
+
+    background: rgb(255, 255, 255);
+    color: rgba(13, 19, 33, 0.4);
+    font-family: Azeret Mono;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0%;
+    text-align: left;
+    padding: 12px 25px 12px 15px;
+    width: 514px;
+    height: 52px;
+}
+
+/* footer styles */
+
+.foot_title {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 17px;
+    letter-spacing: 0%;
+    text-align: left
+}
+
+footer {
+    display: flex;
+    gap: 494px;
+    justify-content: baseline;
+    margin: 0 140px;
+    border-radius: 12px;
+
+    background: rgba(13, 19, 33, 0.03);
+}
+
+.fig{
+    height: 30px;
+}
+.figure{
+    text-align: right;
 }
