--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap');
 
+
+
+
+html {  
+    scroll-behavior: smooth;  
+}
+
 /* shared styles */
 
 .description {
@@ -342,7 +349,4 @@ footer {
 
 .fig{
     height: 30px;
-}
-.figure{
-    text-align: right;
 }
